--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <script>
-	window.location.href = "https://49.205.178.68.host.secureserver.net/";
+	window.location.href = "https://env-0210648.ny-2.paas.massivegrid.net/";
 </script>
